--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,14 @@
   ],
   "minimum-stability": "stable",
   "require": {
-
+    "php": ">=5.5"
+  },
+  "require-dev": {
+      "slim/slim": "^3.0"
   },
   "autoload": {
     "psr-4" : {
-        "flexion\\slim-session-db\\" : "src"
+        "Fx\\" : "src"
      }
   }
 }
