--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "authors": [
     {
       "name": "inlee",
-      "email": "jamesinlee@gmail.com"
+      "email": "inlee@flexion.co.kr"
     },
     {
       "name": "cbpark",
